start to edit thesis

--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -14,9 +14,9 @@
 \usepackage{verbatim}
 %\usepackage{fancybx}
 \usepackage{footnote}
-\usepackage{jtygm}
+%\usepackage{jtygm}
 \usepackage{multirow}
-\usepackage{ascmac}
+%\usepackage{ascmac}
 \usepackage{listings}
 \usepackage{cite}
 \usepackage{url}
@@ -24,7 +24,7 @@
 \usepackage[american]{babel}
 \usepackage[tight]{subfigure}
 
-\usepackage{amsmath}
+%\usepackage{amsmath}
 
 \definecolor{javared}{rgb}{0.6,0,0} % for strings
 \definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
@@ -62,18 +62,18 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 
 %\vspace{30mm}
 \vspace{30mm}
-{\Large\bf HUSTLE:}\\ 
-{\Large\bf Deploying A Secured Wireless Sensor Network}\\ 
+
+{\Large\bf A Regional Food's Features Extraction Algorithm}\\ 
 %HUSTLE: Deploying A Secure Wireless Sensor Network 
 %by Light Communication with Smartphone\vspace{5mm}
-{\Large\bf by Light Communication with Smartphone}\\
+{\Large\bf and Its Application}\\
 \vspace{3mm}
 %\vspace{3mm}
 
 %\vspace{2cm}
 \vspace{10mm}
 
-{\LARGE Nguyen Trung Duc}\\
+{\LARGE Trung Duc Nguyen }\\
 %\vspace{2cm}
 \vspace{10mm}
 {\Large Faculty of Environment and Information Studies}\\
@@ -94,30 +94,16 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 
 \textbf{{\Large Advisors:}}\\
 \vspace{5mm}
-{\Large Professor Hideyuki Tokuda}\\
+{\Large Professor Kiyoki Yasushi}\\
 \vspace{2mm}
-{\Large Professor Jun Murai}\\
+{\Large Diep Nguyen-Thi Ngoc}\\
 \vspace{2mm}
-{\Large Associate Professor Hiroyuki Kusumoto}\\
-\vspace{2mm}
-{\Large Professor Osamu Nakamura}\\
-\vspace{2mm}
-{\Large Associate Professor Kazunori Takashio}\\
-\vspace{2mm}
-{\Large Assistant Professor Rodney D. Van Meter III}\\
-\vspace{2mm}
-{\Large Associate Professor Keisuke Uehara}\\
-\vspace{2mm}
-{\Large Associate Professor Jin Mitsugi}\\
-\vspace{2mm}
-{\Large Lecturer Jin Nakazawa}\\
-\vspace{2mm}
-{\Large Professor Keiji Takeda}\\
+
 
 %\vspace{1.5cm}
 \vspace{12mm}
 
-{\large Copyright\copyright  2013 Nguyen Doan Minh Giang}
+{\large Copyright\copyright  2014 Trung Duc Nguyen}
 
 \end{center}
 
@@ -140,16 +126,16 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{contents/intro}
-\input{contents/background}
-\input{contents/related}
-\input{contents/HUSTLE}
+%\input{contents/background}
+%\input{contents/related}
+\input{contents/algorithm}
 \input{contents/implementation}
-\input{contents/evaluation}
-\input{contents/conclution}
+%\input{contents/evaluation}
+%\input{contents/conclution}
 \input{contents/ack}
-%\input{contents/pub}
+\input{contents/pub}
 \bibliographystyle{ieeetr}
-\bibliography{bachelor_thesis}
+\bibliography{sigproc}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
