--- a/contents/ack.tex
+++ b/contents/ack.tex
@@ -19,5 +19,5 @@ And last but not least, I am heartily grateful to my family. This is the first t
 \begin{flushright}
 \today
 
-Nguyen Doan Minh Giang
+Trung Duc Nguyen 
 \end{flushright}
