--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -125,7 +125,7 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 \baselineskip=9mm
 \pagenumbering{roman}
 
-%\input{contents/abstract}
+\input{contents/abstract}
 \tableofcontents
 \listoftables
 \listoffigures
@@ -146,6 +146,7 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 \input{contents/conclusion}
 \input{contents/ack}
 \input{contents/pub}
+\input{contents/appendix}
 \bibliographystyle{ieeetr}
 \bibliography{sigproc}
 
