--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -4,31 +4,20 @@
 {\bf Abstract of Bachelor's Thesis} \\
 
 \vspace{5mm}
-{\bf HUSTLE:\\Deploying A Secured Wireless Sensor Network\\
-by Light Communication with Smartphone}
+{\bf A Regional Food's Features Extraction Algorithm\\ and Its Application}
 \end{Large}
 \end{center}
 
 %\vspace{0.8cm}
 %\vspace{0.8cm}
 \vspace{0.4cm}
-%NOW ADAY WSN
-%Nowadays, Wireless Sensor Network(WSN) becomes popular, this can be used in many environments with a lot of applications. For example, in research environment, we can use WSN for volcano monitoring, for earthquake monitoring and predicting, and weather forecast. Likewise, in home environment, we also have a lot of potential applications such as security; health monitoring; smart home and children supervising application.
-
-%REQUIREMENT FOR..
-Until now, deploying a secured Wireless Sensor Network (WSN) at home environment still requires users to have certain skills like WSN configuration, security configuration. At the same time, WSN has become popular and WSN has a lot of potential applications at home environment such as home security, remote health services, smart home and children supervising applications.
-
-%which make it difficult for regular users. Therefore, in order to end users to apply in home environment, much simpler method for deploying WSN is necessary.
-
-% PURPOSE
-In this thesis, we propose a method called HUSTLE. HUSTLE provides regular users with an easier and faster method to deploy a secured WSN. HUSTLE connects sink node and new sensor nodes to exchange one-time security key and identifier between the nodes. HUSTLE will be used to set-up those new sensor nodes into the WSN via two interactions, which are (1) setting up new sensor nodes one by one by touching a smartphone, and (2) setting up new sensor nodes simultaneously by directing a smartphone's flashlight to all of them.
-
-%RESULT
-To examine the feasibility and effectiveness of HUSTLE, we implemented a quantitative study based on a series of experiments. The result shows that our HUSTLE can help users set-up WSN six times faster than existing method which mainly rely on selecting true sensor nodes and inputting security code manually. In addition, we requested participants to evaluate HUSTLE by referring to criteria including: "Simple to use", "Tiring to use", "Useful", "Easy to learn", "Easy to fix in case of errors". The result shows that HUSTLE can provide users to setup a secured WSN more simply, faster.
+%Advantages
+Automatically detecting food's taste is a non-trivial part. However, we realize that the taste of food can be extracted by directly analyzing recipes by the ingredients and the amount of them in the recipes. 
+In this paper, we present a food analysis system to discover the taste of foods and to better understand the featured ingredients in each specific geographical region. The main features of this system are (1) to extract dominant ingredients and tastes in a region by analyzing the ingredients' frequency and its uniqueness, and (2) to transform user's existing materials or original recipe to a new recipe according to a targeted taste. To examine the feasibility and applicability of the algorithm, we have developed a web-based application with a recipe database collected from approximately 200 recipes in over 7 regions of Japan: Hokkaido-Tohoku, Kanto, Kansai, Shikoku, Tyubu, Kyusyu-Okinawa and Tyugoku. 
 \vspace{-2.5mm}
 
 \begin{flushright}
-{\bf Giang Doan Minh Nguyen}\\
+{\bf Trung Duc Nguyen}\\
 %\vspace{2mm}
 %\vspace{2mm}
 \vspace{-2mm}
